--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,42 @@
+.card-center {
+  width: 350px;
+  display: block;
+  margin-top: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  vertical-align: middle;
+}
+
+.score-panel {
+  text-align: left;
+  margin-bottom: 10px;
+  padding: 0 30px 0;
+  display: block;
+  height: 64px;
+}
+
+.moves-counter {
+  margin-right: 20px;
+}
+.no-bottom-margin {
+  margin-bottom: 0 !important;
+}
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.score-number {
+  font-size: 64px;
+  line-height: 50px;
+}
+
 .grid {
   display: grid;
-  grid-template-columns: repeat(5, 150px);
+  grid-template-columns: repeat(4, 150px);
   gap: 16px;
   justify-content: center;
 }
