--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,8 @@
 .card-center {
-  width: 350px;
+  -webkit-box-shadow: 10px 10px 43px -18px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 10px 10px 43px -18px rgba(0, 0, 0, 0.75);
+  box-shadow: 10px 10px 43px -18px rgba(0, 0, 0, 0.75);
+  width: 250px;
   display: block;
   margin-top: 10%;
   margin-left: auto;
